# C-Lab-Programming

C lab Programming/Maman14-FinalProject/: CMakeLists.txt  Explanation  README.md
C lab Programming/Maman14-FinalProject/headers/: char_util.h  code_generator.h  error_handler.h  lexer.h  nodes.h  parser.h  preprocessor.h  safe_allocations.h  semantic_analyzer.h  string_util.h  token.h
C lab Programming/Maman14-FinalProject/source/: code_generator.c  error_handler.c  lexer.c  parser.c  preprocessor.c  safe_allocations.c  semantic_analyzer.c
C lab Programming/Maman14-FinalProject/tests/TheTest/: Makefile  analyzer_test.as  assembler  edge_error.am  factorial.as  function_call_string_mani.as  invalid_char_test.as  invalid_macro.as  macro_label_test.am  main.c
C lab Programming/Maman14-FinalProject/tests/code_generator/generate_entry_file_string/: Makefile  generate_entry_file_string  generate_entry_file_string.c  generate_entry_file_string_op  test1.as
C lab Programming/Maman14-FinalProject/tests/code_generator/generate_object_and_external_files/: Makefile  generate_object_and_external_files  generate_object_and_external_files.c  test1.as  test1.ent  test1.ext  test1.ob
C lab Programming/Maman14-FinalProject/tests/code_generator/output_generate_test/: Makefile  output_generate_test  output_generate_test.c  test1.am  test1.ent  test1.ext  test1.ob
C lab Programming/Maman14-FinalProject/tests/lexer/lexer_analyze_test/: Makefile  lexer_analyze_output  lexer_analyze_test  lexer_analyze_test.c
C lab Programming/Maman14-FinalProject/tests/lexer/tokenize_nonOp_identifiers_test/: Makefile  tokenize_nonOp_identifiers_output  tokenize_nonOp_identifiers_test  tokenize_nonOp_identifiers_test.c
C lab Programming/Maman14-FinalProject/tests/lexer/tokenize_number_test/: Makefile  tokenize_number_output  tokenize_number_test  tokenize_number_test.c
C lab Programming/Maman14-FinalProject/tests/lexer/tokenize_registers_test/: Makefile  tokenize_registers_output  tokenize_registers_test  tokenize_registers_test.c
C lab Programming/Maman14-FinalProject/tests/lexer/tokenize_seperator_test/: Makefile  tokenize_seperator_test  tokenize_seperator_test.c
C lab Programming/Maman14-FinalProject/tests/lexer/tokenize_string_test/: Makefile  tokenize_string_test  tokenize_string_test.c
C lab Programming/Maman14-FinalProject/tests/parser/parse_data_directive_guidance/: Makefile  parse_data_directive_guidance_test  parse_data_directive_guidance_test.c  (+4 more)
C lab Programming/Maman14-FinalProject/utils/: char_util.c  string_util.c
(+90 files in other folders)
